# mini-agent-nanobeam-cavity

./: .gitignore  CLAUDE.md  README.md  agent_server.py  build_gds.py  cavity_design_log.json  chat.js  main.py  mininal_agent.py  package.json  pnpm-lock.yaml  pyproject.toml  run_lumerical.py  skills.md  swe_agent.py  test.ipynb
app/: cli.py
core/: agent.py  history.py  state.py  tool_registry.py  tools.py
examples/: chat_with_mcp.py
tools/: cavity_mcp.py  run_lumerical.py  toolset.py
